Font update and some css

--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -27,3 +27,10 @@ header{
     background-size: cover;
     background-repeat: no-repeat;
 }
+#plantdisplay{
+    margin-top: 20vh;
+}
+h1{
+    font-family: 'Crete Round', serif;
+    color: #4e555b;
+}
