--- a/public/assets/styles/screen.css
+++ b/public/assets/styles/screen.css
@@ -17,10 +17,18 @@ header {
 }
 
 .btn {
+    font-size: 2rem
     background-color: #98C764;
     color: white;
     border: hidden;
     opacity: 0.5;
+    margin: 0;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+    
 }
 
 #overview {
